crud - fix №1